--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE htnl>
+<!DOCTYPE html>
 <html>
 <body>
-<h1> hello TE IT students ,welcome to cloud 9 </h1>
+<h1> hello TE IT students ,welcome to cloud 9 v2</h1>
 </<body>
-</html>
+</html
